2010-07-10  David Reveman  <davidr@novell.com>

	* frameworkelement.cpp (ComputeGlobalBounds, ComputeSurfaceBounds):
	Don't use GetEffect directly. Use GetRenderEffect instead.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* media.cpp|h: Image: Detach from any events we may be listening for on the
	bitmap source when disposed. Fixes a number of crashes when we'd get
	downloader events after the image was destructed, but not the bitmap source.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* media.cpp|h: Remove unused methods.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* debug.cpp: Add an env var to sleep for eternity after a crash, to make it
	easier to attach gdb.

2010-07-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: DependencyObject::NotifyListenersOfPropertyChange:
	clone the list of listeners to notify, and after each notification check with
	the master list if the listener is still there before calling it. Fixes a
	crash when the listener_list is modified as a result of notifying a listener.

2010-07-09  Jeffrey Stedfast  <fejj@novell.com>

	Fixes drt Seadragon-501

	* deepzoomimagetilesource.cpp (start_element): Image Overlap is
	allowed to be 0. MinLevel and MaxLevel attrs for DisplayRect can
	also be 0. As can X and Y attributes for Rect.

2010-07-09  Sebastien Pouliot  <sebastien@ximian.com>

	* application.cpp: Use RemoveHandler twice (instead of a single
	RemoveAllHandlers) to see if this fix the multiple DRT crashing
	after success.

2010-07-09  Jeffrey Stedfast  <fejj@novell.com>

	* deepzoomimagetilesource.cpp (EndElement): Set the subsource's
	server_format to info->server_format, not info->format.
	(DZParsedImage): ServerFormat is not a required attr.

2010-07-09  Alan McGovern  <amcgovern@novell.com>

	* control.cpp: Whenever the ContentTemplate changes we need to
	  invalidate the measure. We can't rely on InvalidateMeasure
	  being called as part of clearing out the existing root