@@ -39,6 +39,9 @@ Canvas::ComputeBounds ()
 		// toplevel canvas don't subscribe to the same bounds computation as others
 		bounds = Rect (0, 0, surface->GetWindow()->GetWidth(), surface->GetWindow()->GetHeight());
 		bounds_with_children = Rect (0, 0, surface->GetWindow()->GetWidth(), surface->GetWindow()->GetHeight());
+
+		ComputeGlobalBounds ();
+		ComputeSurfaceBounds ();
 	}
 }
 
